[gd_scene load_steps=10 format=3 uid="uid://bkirc72am4g2r"]

[ext_resource type="Script" path="res://scenes/main_volume_layered_shader.gd" id="1_8wlyg"]
[ext_resource type="Script" path="res://addons/volume_layered_shader/scenes/controls/volume_layered_shader.gd" id="2_da4op"]
[ext_resource type="ImageTexture3D" uid="uid://baqcwcckmp88m" path="res://data/npy_noise_4d_cpu.tres" id="3_5jpgh"]
[ext_resource type="Texture2D" uid="uid://r1elp0kqouby" path="res://addons/volume_layered_shader/textures/low_values_grtadient.tres" id="4_8wwdj"]
[ext_resource type="PackedScene" uid="uid://bk62samj5dspq" path="res://scenes/controls/trackball_tumbler.tscn" id="5_7v14r"]
[ext_resource type="ButtonGroup" uid="uid://iqkw4bdceccp" path="res://scenes/player_buttons.tres" id="6_te0ra"]

[sub_resource type="Environment" id="Environment_1nlpu"]
background_mode = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cm72"]

[sub_resource type="Theme" id="Theme_nfbml"]
PanelContainer/styles/panel = SubResource("StyleBoxEmpty_8cm72")

[node name="main" type="Node3D"]
script = ExtResource("1_8wlyg")
source_images = "res://art/iguana/Iguana_png.zip"

[node name="VolumeLayeredShader" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("2_da4op")
texture = ExtResource("3_5jpgh")
num_layers = 200
gamma = 6.0
color_scalar = 1.363
gradient = ExtResource("4_8wwdj")
exclusion_planes = Array[NodePath]([NodePath("../Marker3D"), NodePath("")])

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.76632)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1nlpu")

[node name="trackball_tumbler" parent="." instance=ExtResource("5_7v14r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.52444)

[node name="Camera3D" type="Camera3D" parent="trackball_tumbler"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="trackball_tumbler"]

[node name="popup_load_file" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.zip", "*.npy")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 355.0
offset_bottom = 146.0
theme = SubResource("Theme_nfbml")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="bn_load" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Load volume"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Num Layers
"

[node name="spin_num_layers" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
allow_greater = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Gamma"

[node name="slider_gamma" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0
step = 0.01
value = 1.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Frame"

[node name="spin_frame" type="SpinBox" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Frames per second"

[node name="spin_fps" type="SpinBox" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 30.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="bn_play" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
toggle_mode = true
button_group = ExtResource("6_te0ra")
text = "Play"

[node name="bn_stop" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = ExtResource("6_te0ra")
text = "Stop"

[node name="check_loop" type="CheckBox" parent="PanelContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Loop"

[connection signal="file_selected" from="popup_load_file" to="." method="_on_popup_load_file_file_selected"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/bn_load" to="." method="_on_bn_load_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer2/spin_num_layers" to="." method="_on_spin_num_layers_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HBoxContainer/slider_gamma" to="." method="_on_slider_gamma_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/GridContainer/spin_frame" to="." method="_on_spin_frame_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer4/bn_play" to="." method="_on_bn_play_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer4/bn_stop" to="." method="_on_bn_stop_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer4/check_loop" to="." method="_on_check_loop_toggled"]
